@@ -1,3 +1,10 @@
+2007-05-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCast.c (createFunction): also generate non-inlined version of
+	  function for functions declared as "static inline"
+	* src/SDCCast.c (fixupInline, inlineAddDecl): reset symbol state so
+	  function can be inlined after non-inlined version generated.
+
 2007-05-10 Borut Razem <borut.razem AT siol.net>
 
 	* support/scripts/gen_known_bugs.pl: added script
